--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="title_projection_key">title</string>
     <string name="authors_projection_key">authors</string>
 
+    <!-- Feed Save Instance Key -->
+    <string name="feed_list_save_instance_key">FEED_LIST_SAVE_KEY</string>
+
     <!-- Story Intent -->
     <string name="INTENT_ACTION_STORY_LIST">app.com.ttins.newsfeed.STORY_LIST</string>
 
@@ -21,6 +24,9 @@
     <string name="http_url_not_found_message">Service unavailable</string>
     <string name="http_generic_error_message">Service error</string>
     <string name="network_unavailable_message">Network unavailable. Please check the internet connectivity</string>
+
+    <!-- TOAST MESSAGES -->
+    <string name="updating_list">Updating list...</string>
 
     <!-- Json Feed Reply -->
     <string name="json_feed_response_data_key">responseData</string>
